---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: argument should not be labeled
  ┌─ [snippet]:3:11
  │
3 │   address(val: 0)
  │           ^^^ remove this label


